# c-project-template

./: CMakeLists.txt  generate.sh  run.sh
src/: main.c  types.h
